Fix T47737: Lattice crashes w/ smooth modifier

Add flag for modifiers that support lattice